@@ -1,37 +1,180 @@
 // Execute Tasks in SubModule: gradle MODUL:clean build
-buildscript {
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-
-    dependencies {
-        classpath("de.freese.gradle:gradle-plugins:$version_myConventionPlugin")
-        classpath("io.spring.gradle:dependency-management-plugin:$version_springDependencyManagement")
-    }
+plugins {
+    id "io.spring.dependency-management" version "$version_springDependencyManagement" apply false
+//    id "org.openjfx.javafxplugin" version "$version_javafxPlugin" apply false
+    id "org.springframework.boot" version "$version_springBoot" apply false
+//    id "com.github.ben-manes.versions" version "0.48.0" apply false
 }
 
 subprojects {
     apply plugin: "java"
-//    apply plugin: "maven-publish"
     apply plugin: "io.spring.dependency-management"
-    apply plugin: "de.freese.gradle.plugin.conventions"
 
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:$version_springBoot")
+            mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
         }
 
         dependencies {
             dependency("com.lmax:disruptor:$version_disruptor")
+
+            // JARs aus libs-Folder.
+            //implementation fileTree(dir: "libs", include: "*.jar")
         }
+    }
+
+    configurations.configureEach {
+        exclude group: "ch.qos.logback", module: "logback-classic"
     }
 
     dependencies {
         testImplementation("org.junit.jupiter:junit-jupiter")
         testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
+
+    //java {
+    //    withJavadocJar()
+    //    withSourcesJar()
+    //}
+
+    // Eigenes Jar für sources.
+    tasks.register("sourcesJar", Jar) {
+        group = "My Tasks"
+        description = "Creates a jar from the source files."
+
+        dependsOn("classes")
+
+        getArchiveClassifier().set("sources")
+        from sourceSets.main.allSource
+    }
+
+    // Eigenes Jar für tests.
+    tasks.register("testJar", Jar) {
+        group = "My Tasks"
+        description = "Creates a jar from the test files."
+
+        dependsOn("testClasses")
+
+        getArchiveClassifier().set("test")
+        from sourceSets.test.output
+    }
+
+    // Eigenes Jar für test-sources
+    tasks.register("testSourcesJar", Jar) {
+        group = "My Tasks"
+        description = "Creates a jar from the test-source files."
+
+        dependsOn("testClasses")
+
+        getArchiveClassifier().set("test-sources")
+        from sourceSets.test.allSource
+    }
+
+    // Eigenes Jar für javadoc
+    tasks.register("javadocJar", Jar) {
+        group = "My Tasks"
+        description = "Creates a jar from the javadoc files."
+
+        dependsOn("javadoc")
+
+        getArchiveClassifier().set("javadoc")
+        from javadoc.destinationDir
+    }
+
+    // Artefakte zusammenführen
+    artifacts {
+        archives sourcesJar
+        archives testJar
+        archives testSourcesJar
+        archives javadocJar
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+//            vendor = JvmVendorSpec.ORACLE
+        }
+    }
+
+    javadoc {
+        if (JavaVersion.current().isJava9Compatible()) {
+            options.addBooleanOption('html5', true)
+        }
+
+        // No Errors for missing JavaDoc.
+        options.addBooleanOption("Xdoclint:none", true)
+        options.addStringOption("-quiet")
+    }
+
+    test {
+        enabled = true
+        ignoreFailures = false
+        maxParallelForks = 4
+
+        useJUnitPlatform()
+
+        testLogging {
+            showStandardStreams = false
+//            events = ["PASSED", "FAILED", "SKIPPED", "STANDARD_OUT", "STANDARD_ERROR"]
+            events = ["FAILED", "SKIPPED"]
+//            showExceptions = true
+//            showCauses = true
+//            showStackTraces = true
+//            exceptionFormat = TestExceptionFormat.FULL
+        }
+
+        jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
+    }
+
+    [compileJava, compileTestJava]*.options*.compilerArgs = [
+            "--add-modules=ALL-SYSTEM",
+            //"--add-modules=jdk.incubator.concurrent",
+            //"-verbose",
+            // Compiler Warnings as Errors.
+            //"-Werror",
+            // Enable all.
+            //"-Xlint:all",
+            // Überflüssige Typecast, wie zum Beispiel in der Anweisung int i = (int) 0;
+            "-Xlint:cast",
+            // Verdächtige Bytecode-Dateien, beispielsweise mit anderen Merkmalen als die ebenfalls enthaltene Versionsangabe eigentlich gestattet.
+            "-Xlint:classfile",
+            // Verwendung von Klassen oder Methoden, die als Deprecated markiert sind.
+            "-Xlint:deprecation",
+            // Annotation @Deprecated und @deprecated-Tag im Javadoc-Kommentar widersprechen sich.
+            "-Xlint:dep-ann",
+            // Potenzielle Division durch null.
+            "-Xlint:divzero",
+            // Leere Anweisung nach if.
+            "-Xlint:empty",
+            // case-Block in einer switch-Anweisung ohne abschließendes break.
+            "-Xlint:fallthrough",
+            // return-Anweisung in einem finally-Block. Diese Konstruktion kann eine andere return-Anweisung im try-Block maskieren und zu schwer nachvollziehbarem Verhalten führen.
+            "-Xlint:finally",
+            // Aufruf des Compilers mit einer älteren Version für den Quelltext (Schalter -source) als für die Laufzeitbibliothek (-bootclasspath).
+            // Dabei kann Bytecode entstehen, der auf der älteren Plattform nicht funktioniert, weil er sich auf die neuere Laufzeitbibliothek bezieht.
+            "-Xlint:options",
+            // Fehlende @Override-Annotation.
+            "-Xlint:overrides",
+            // Unerreichbares Element im Classpath.
+            "-Xlint:path",
+            // Annotation gefunden, für die sich kein Prozessor zuständig erklärt.
+            "-Xlint:processing",
+            // Verwendung einer generischen Klasse oder eines generischen Interface ohne Typ-Argument.
+            "-Xlint:rawtypes",
+            // Fehlende oder falsche Definition von serialVersionUID in einer Klasse, die das Interface Serializable implementiert.
+            "-Xlint:serial",
+            // Bezug auf ein statisches Element über eine Objektreferenz statt über den Klassennamen.
+            "-Xlint:static",
+            // Verdächtiger ARM-Block, wie beispielsweise ARM-Block mit einer Ressource, die nicht verwendet wird, ARM-Block mit einem expliziten close-Aufruf,
+            // Definition einer close-Methode mit einer anderen Exception als IOException.
+            "-Xlint:try",
+            // Einsatz eines generischen Typs in einem Kontext, in dem die statische Typprüfung des Compilers nicht mehr sicherstellen kann, dass Typfehler zur Laufzeit ausgeschlossen sind.
+            "-Xlint:unchecked"
+            // Vararg-Parameter mit einem generischen Typ verbieten.
+            , "-Xlint:varargs"
+            // Disable annotation processing.
+            //"-proc:none"
+    ]
 }
 
 project("knn-net") {
@@ -45,6 +188,7 @@ project("knn-net") {
 }
 
 project("knn-demo") {
+    apply plugin: "application"
     description = "Demos für künstliche neurale Netze"
     dependencies {
         implementation(project(":knn-net"))
@@ -56,5 +200,15 @@ project("knn-demo") {
 
         testImplementation("org.mariadb.jdbc:mariadb-java-client")
         testImplementation("org.springframework:spring-jdbc")
+    }
+    application {
+        mainClass = "de.freese.knn.buttons.KnnButtonMain"
+    }
+    jar {
+        manifest {
+            attributes(
+                    "Main-Class": "de.freese.knn.buttons.KnnButtonMain"
+            )
+        }
     }
 }
